Fix chrome transition bug
During transition the images shifted by a pixel and appeared blurry

--- a/client/scss/components/_promo.scss
+++ b/client/scss/components/_promo.scss
@@ -28,6 +28,7 @@
   .image {
     display: block;
     width: 100%;
+    backface-visibility: hidden; // Fixes chrome bug where image shifts slightly and appears blurry during transition
     transition: transform 200ms ease;
   }
 
